--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
 <nav>
   <ul>
     <li><a href="/" class="{% if page.url == base_url %}active{% endif %}">Home</a></li>
-    <li><a href="/section1/" class="{% if page.url == base_url %}active{% endif %}">Section 1</a></li>
-    <li><a href="/section2/" class="{% if page.url == base_url %}active{% endif %}">Section 2</a></li>
-    <li><a href="/section3/" class="{% if page.url == base_url %}active{% endif %}">Section 3</a></li>
+    <li><a href="dockerized-web-app/section1/" class="{% if page.url == base_url %}active{% endif %}">Section 1</a></li>
+    <li><a href="dockerized-web-app/section2/" class="{% if page.url == base_url %}active{% endif %}">Section 2</a></li>
+    <li><a href="dockerized-web-app/section3/" class="{% if page.url == base_url %}active{% endif %}">Section 3</a></li>
   </ul>
 </nav>
