--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 
 <nav>
   <ul>
-    <li><a href="/" class="{% if page.url == base_url %}active{% endif %}">Home</a></li>
+    <li><a href="dockerized-web-app/" class="{% if page.url == base_url %}active{% endif %}">Home</a></li>
     <li><a href="dockerized-web-app/section1/" class="{% if page.url == base_url %}active{% endif %}">Section 1</a></li>
     <li><a href="dockerized-web-app/section2/" class="{% if page.url == base_url %}active{% endif %}">Section 2</a></li>
     <li><a href="dockerized-web-app/section3/" class="{% if page.url == base_url %}active{% endif %}">Section 3</a></li>
