--- a/_layouts/section2.html
+++ b/_layouts/section2.html
@@ -9,4 +9,4 @@ layout: default
 <!-- Insert content from your Docker part 2 blog post here -->
 {{ content }}
 
-<p>[Continue to <a href="/sectio3/">Section 3</a>]</p>
+<p>[Continue to <a href="/section3/">Section 3</a>]</p>
